<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_videosettings_key"
        android:title="@string/pref_videosettings_title">

        <CheckBoxPreference
            android:key="@string/pref_videocall_key"
            android:title="@string/pref_videocall_title"
            android:dialogTitle="@string/pref_videocall_dlg"
            android:defaultValue="@string/pref_videocall_default" />
        <CheckBoxPreference
            android:key="@string/pref_audiocall_key"
            android:title="@string/pref_audiocall_title"
            android:dialogTitle="@string/pref_audiocall_dlg"
            android:defaultValue="@string/pref_audiocall_default" />
        <CheckBoxPreference
            android:key="@string/pref_push_key"
            android:title="@string/pref_push_title"
            android:dialogTitle="@string/pref_push_dlg"
            android:defaultValue="@string/pref_push_default" />

        <CheckBoxPreference
            android:key="@string/pref_pull_key"
            android:title="@string/pref_pull_title"
            android:dialogTitle="@string/pref_pull_dlg"
            android:defaultValue="@string/pref_pull_default" />

        <CheckBoxPreference
            android:key="@string/pref_streamencrypt_key"
            android:title="@string/pref_streamencrypt_title"
            android:dialogTitle="@string/pref_streamencrypt_dlg"
            android:defaultValue="@string/pref_streamencrypt_default" />

        <CheckBoxPreference
            android:key="@string/pref_hwcodec_open_key"
            android:title="@string/pref_hwcodec_open_title"
            android:dialogTitle="@string/pref_hwcodec_open_dlg"
            android:defaultValue="@string/pref_hwcodec_open_default" />

        <CheckBoxPreference
            android:key="@string/pref_screencapture_key"
            android:title="@string/pref_screencapture_title"
            android:defaultValue="@string/pref_screencapture_default" />

        <CheckBoxPreference
            android:key="@string/pref_camera2_key"
            android:title="@string/pref_camera2_title"
            android:defaultValue="@string/pref_camera2_default" />

        <CheckBoxPreference
            android:key="@string/pref_beautify_key"
            android:title="@string/pref_beautify_title"
            android:defaultValue="@string/pref_beautify_default" />

        <ListPreference
            android:key="@string/pref_resolution_key"
            android:title="@string/pref_resolution_title"
            android:defaultValue="@string/pref_resolution_default"
            android:dialogTitle="@string/pref_resolution_dlg"
            android:entries="@array/videoResolutions"
            android:entryValues="@array/videoResolutionsValues" />

        <ListPreference
            android:key="@string/pref_encode_resolution_key"
            android:title="@string/pref_encode_resolution_title"
            android:defaultValue="@string/pref_encode_resolution_default"
            android:dialogTitle="@string/pref_encode_resolution_dlg"
            android:entries="@array/encodeResolutions"
            android:entryValues="@array/encodeResolutionsValues" />

        <ListPreference
            android:key="@string/pref_fps_key"
            android:title="@string/pref_fps_title"
            android:defaultValue="@string/pref_fps_default"
            android:dialogTitle="@string/pref_fps_dlg"
            android:entries="@array/cameraFps"
            android:entryValues="@array/cameraFps" />

        <ListPreference
            android:key="@string/pref_min_fps_key"
            android:title="@string/pref_min_fps_title"
            android:defaultValue="@string/pref_min_fps_default"
            android:dialogTitle="@string/pref_min_fps_dlg"
            android:entries="@array/minFps"
            android:entryValues="@array/minFps" />

        <CheckBoxPreference
            android:key="@string/pref_capturequalityslider_key"
            android:title="@string/pref_capturequalityslider_title"
            android:dialogTitle="@string/pref_capturequalityslider_dlg"
            android:defaultValue="@string/pref_capturequalityslider_default" />

        <ListPreference
            android:key="@string/pref_maxvideobitrate_key"
            android:title="@string/pref_maxvideobitrate_title"
            android:defaultValue="@string/pref_maxvideobitrate_default"
            android:dialogTitle="@string/pref_maxvideobitrate_dlg"
            android:entries="@array/startBitrate"
            android:entryValues="@array/startBitrate" />

        <EditTextPreference
            android:key="@string/pref_maxvideobitratevalue_key"
            android:title="@string/pref_maxvideobitratevalue_title"
            android:inputType="number"
            android:defaultValue="@string/pref_maxvideobitratevalue_default"
            android:dialogTitle="@string/pref_maxvideobitratevalue_dlg" />

        <ListPreference
            android:key="@string/pref_videocodec_key"
            android:title="@string/pref_videocodec_title"
            android:defaultValue="@string/pref_videocodec_default"
            android:dialogTitle="@string/pref_videocodec_dlg"
            android:entries="@array/videoCodecs"
            android:entryValues="@array/videoCodecs" />

        <CheckBoxPreference
            android:key="@string/pref_hwcodec_key"
            android:title="@string/pref_hwcodec_title"
            android:dialogTitle="@string/pref_hwcodec_dlg"
            android:defaultValue="@string/pref_hwcodec_default" />

        <CheckBoxPreference
            android:key="@string/pref_capturetotexture_key"
            android:title="@string/pref_capturetotexture_title"
            android:dialogTitle="@string/pref_capturetotexture_dlg"
            android:defaultValue="@string/pref_capturetotexture_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_audiosettings_key"
        android:title="@string/pref_audiosettings_title">

        <ListPreference
            android:key="@string/pref_startaudiobitrate_key"
            android:title="@string/pref_startaudiobitrate_title"
            android:defaultValue="@string/pref_startaudiobitrate_default"
            android:dialogTitle="@string/pref_startaudiobitrate_dlg"
            android:entries="@array/startBitrate"
            android:entryValues="@array/startBitrate" />

        <EditTextPreference
            android:key="@string/pref_startaudiobitratevalue_key"
            android:title="@string/pref_startaudiobitratevalue_title"
            android:inputType="number"
            android:defaultValue="@string/pref_startaudiobitratevalue_default"
            android:dialogTitle="@string/pref_startaudiobitratevalue_dlg" />

        <ListPreference
            android:key="@string/pref_audiocodec_key"
            android:title="@string/pref_audiocodec_title"
            android:defaultValue="@string/pref_audiocodec_default"
            android:dialogTitle="@string/pref_audiocodec_dlg"
            android:entries="@array/audioCodecs"
            android:entryValues="@array/audioCodecs" />

        <ListPreference
            android:key="@string/pref_audiosamplerate_key"
            android:title="@string/pref_audiosamplerate_title"
            android:defaultValue="@string/pref_audiosamplerate_default"
            android:dialogTitle="@string/pref_audiosamplerate_dlg"
            android:entries="@array/audioSampleRates"
            android:entryValues="@array/audioSampleRates" />

        <CheckBoxPreference
            android:key="@string/pref_noaudioprocessing_key"
            android:title="@string/pref_noaudioprocessing_title"
            android:dialogTitle="@string/pref_noaudioprocessing_dlg"
            android:defaultValue="@string/pref_noaudioprocessing_default" />

        <CheckBoxPreference
            android:key="@string/pref_aecdump_key"
            android:title="@string/pref_aecdump_title"
            android:dialogTitle="@string/pref_aecdump_dlg"
            android:defaultValue="@string/pref_aecdump_default" />

        <CheckBoxPreference
            android:key="@string/pref_opensles_key"
            android:title="@string/pref_opensles_title"
            android:dialogTitle="@string/pref_opensles_dlg"
            android:defaultValue="@string/pref_opensles_default" />

        <CheckBoxPreference
            android:key="@string/pref_disable_built_in_aec_key"
            android:title="@string/pref_disable_built_in_aec_title"
            android:dialogTitle="@string/pref_disable_built_in_aec_dlg"
            android:defaultValue="@string/pref_disable_built_in_aec_default" />

        <CheckBoxPreference
            android:key="@string/pref_audiorecord_key"
            android:title="@string/pref_audiorecord_title"
            android:dialogTitle="@string/pref_audiorecord_dlg"
            android:defaultValue="@string/pref_audiorecord_default" />

        <CheckBoxPreference
            android:key="@string/pref_disable_built_in_agc_key"
            android:title="@string/pref_disable_built_in_agc_title"
            android:dialogTitle="@string/pref_disable_built_in_agc_dlg"
            android:defaultValue="@string/pref_disable_built_in_agc_default" />

        <CheckBoxPreference
            android:key="@string/pref_disable_built_in_ns_key"
            android:title="@string/pref_disable_built_in_ns_title"
            android:dialogTitle="@string/pref_disable_built_in_ns_dlg"
            android:defaultValue="@string/pref_disable_built_in_ns_default" />

        <CheckBoxPreference
            android:key="@string/pref_enable_level_control_key"
            android:title="@string/pref_enable_level_control_title"
            android:defaultValue="@string/pref_enable_level_control_default" />

        <ListPreference
            android:key="@string/pref_speakerphone_key"
            android:title="@string/pref_speakerphone_title"
            android:defaultValue="@string/pref_speakerphone_default"
            android:dialogTitle="@string/pref_speakerphone_dlg"
            android:entries="@array/speakerphone"
            android:entryValues="@array/speakerphoneValues" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_miscsettings_key"
        android:title="@string/pref_miscsettings_title">

        <CheckBoxPreference
            android:key="@string/pref_displayhud_key"
            android:title="@string/pref_displayhud_title"
            android:dialogTitle="@string/pref_displayhud_dlg"
           android:defaultValue="@string/pref_displayhud_default" />

        <CheckBoxPreference
            android:key="@string/pref_tracing_key"
            android:title="@string/pref_tracing_title"
            android:dialogTitle="@string/pref_tracing_dlg"
           android:defaultValue="@string/pref_tracing_default" />
    </PreferenceCategory>

</PreferenceScreen>
